# git-auto-django

./: .gitignore  README.md  git_auto_log.txt  push_py.py  pyproject.toml
git_auto/: main.py
src/: version.py
src/git_auto_django.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ssssgit aaauto eeerrors/: error_20251226_154648.txt  error_20251226_154744.txt
