[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-auto-django"
version = "1.1.3"
description = "Automatic git commit & push tool for Django projects"
authors = [
  { name="Sina Lalebakhsh" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "requests"
]

[project.scripts]
git-auto = "git_auto.main:cli"


